@@ -1,4 +1,2 @@
 Features to be added:
-
-- Import/export crontab file
 - New task wizard
